k8s/keel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: kube-system
  labels:
    app: keel
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keel
  template:
    metadata:
      labels:
        app: keel
    spec:
      serviceAccountName: keel
      containers:
        - name: keel
          image: keelhq/keel:latest
          imagePullPolicy: Always
          command: ["/bin/keel"]
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: "15m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
